@@ -57,9 +57,6 @@ Body.prototype.line = function (str, prefix){
 Body.prototype.option = function (o){
 	if (!o.long && !o.short) throw new ArgpError ("At least a long name " +
 			"must be configured");
-	
-	if (o.negate && o.short) throw new ArgpError ("Cannot configure a short " +
-			"name if the option is a negated flag");
 			
 	if (o.long){
 		//Long names cannot contain whitespaces
