@@ -371,7 +371,7 @@ Argp.prototype._newOption = function (o){
 	
 	//Normalize the value
 	if (o.flag){
-		o.value = !o.negate;
+		o.value = o.short && o.opt && o.opt.negate ? false : !o.negate;
 	}else{
 		if (o.opt){
 			if (o.value === undefined){
